Implements apply for style

--- a/tests/Style.yml
+++ b/tests/Style.yml
@@ -9,12 +9,15 @@ Typography:
   small: font(System, 12)
   medium: font(System-Semibold, 18)
 
+Blue for UIView:
+  backgroundColor: $Color.blue
+
 __appearance_proxy__ DefaultButton extends FooView:
   margin: 12
   opaque: false
   color: $Color.blue
 
-__appearance_proxy__ __open__ FooView:
+__appearance_proxy__ FooView for FooView:
   margin: 12
   opaque: true
   font: $Typography.small
